--- a/design-brief.html
+++ b/design-brief.html
@@ -576,7 +576,7 @@
                                                                 <p> have tooltips on hover.</p>
                                                           </div>
                                                           <div class="modal-footer">
-                                                            <button type="button" class="btn btn-primary">OK</button>
+                                                            <button type="button" class="btn btn-primary"  data-dismiss="modal">OK</button>
                                                           </div>
                                                         </div>
                                                       </div>
@@ -623,7 +623,7 @@
                                                                 <p> have tooltips on hover.</p>
                                                           </div>
                                                           <div class="modal-footer">
-                                                            <button type="button" class="btn btn-primary">OK</button>
+                                                            <button type="button" class="btn btn-primary"  data-dismiss="modal">OK</button>
                                                           </div>
                                                         </div>
                                                       </div>
@@ -669,7 +669,7 @@
                                                         <p> have tooltips on hover.</p>
                                                   </div>
                                                   <div class="modal-footer">
-                                                    <button type="button" class="btn btn-primary">OK</button>
+                                                    <button type="button" class="btn btn-primary"  data-dismiss="modal">OK</button>
                                                   </div>
                                                 </div>
                                               </div>
