--- a/design-brief.html
+++ b/design-brief.html
@@ -325,7 +325,7 @@
                             <li class="media my-4">
                                 <div class="circle-icon mr-4">2</div>
                                 <div class="media-body">
-                                    <h5>Generate Practice Exercises & Quizzes.</h5>                                        </h5>
+                                    <h5>Generate Practice Exercises & Quizzes.</h5>
                                     <p>A.I.D.A will analyze the content of the given documents and will multiple choice, fill in the blank, and matching questions in the form of practice problems or complete practice tests.</p>
                                 </div>
                             </li>
