--- a/index.html
+++ b/index.html
@@ -520,6 +520,37 @@
             </div>
 
         </div>
+        
+        <div class="section bg-white">
+        <div class="container">
+            <div class="section-title">
+                <h3>Student Projects</h3>
+            </div>
+
+            <div class="testimonials owl-carousel">
+                <div class="testimonials-single">
+                    <img src="img/catapult.png" alt="client" class="client-img">
+                    <blockquote class="blockquote">Students in principles of engineering were challenged to create a catapult by using simple materials such as plywood and duct tape.</blockquote>
+                    <h5 class="mt-4 mb-2">Catapult</h5>
+                    <h5 class="mt-4 mb-2"><b>Principles of Engineering</b></h5>
+                </div>
+                <div class="testimonials-single">
+                    <img src="img/scratch.png" alt="client" class="client-img">
+                    <blockquote class="blockquote">In Introduction to Computer Programming, students created many Scratch games to learn basic programming logic as well as game design. One of their final projects was a mock "Flappy Bird" game, complete with character animations and a background loop.</blockquote>
+                    <h5 class="mt-4 mb-2">Flappy Bird</h5>
+                    <h5 class="mt-4 mb-2"><b>Intro to Programming</b></h5>
+                </div>
+                <div class="testimonials-single">
+                    <img src="img/chatbot.png" alt="client" class="client-img">
+                    <blockquote class="blockquote">Students in the AP Computer Science classes created a chatbot that recognizes specific keywords and phrases said by the user to hold a conversation and even complete basic tasks for the user. </blockquote>
+                    <h5 class="mt-4 mb-2">Chatbot</h5>
+                    <h5 class="mt-4 mb-2"><b>AP Computer Science</b></h5>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
         <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
         <script src='http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js'></script>
 
