--- a/design-brief.html
+++ b/design-brief.html
@@ -472,27 +472,29 @@
                     <div class="col-md-6">
                         <div>
                             <p style="float: left;"><img src="https://image.freepik.com/free-icon/nut-icon_318-84971.jpg" height="20px" width="20px"  border="1px"></p>
-                            <h4 class="mb-3"> &nbsp Is AIDA safe?</h4>
+                            <h4 class="mb-3"> &nbsp Teacher</h4>
                         </div>
-                        <p class="light-font mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium, nisi nisi fermentum enim, et sagittis dolor nulla vel sapien. Vestibulum sit amet mattis ante. </p>
+                        <p class="light-font mb-5">Want to learn a new topic? By collecting data from documents that users scan, A.I.D.A has developed a knowledge base of any topics pertaining to school as well as many life skills. A.I.D.A knows the best way to convey this information and will adapt to your learning style. </p>
                         <div>
                             <p style="float: left;"><img src="https://image.freepik.com/free-icon/nut-icon_318-84971.jpg" height="20px" width="20px"  border="1px"></p>
-                            <h4 class="mb-3"> &nbsp Is AIDA safe?</h4>
+                            <h4 class="mb-3"> &nbsp Tutor</h4>
                         </div>
-                        <p class="light-font mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium, nisi nisi fermentum enim, et sagittis dolor nulla vel sapien. Vestibulum sit amet mattis ante. </p>
+                        <p class="light-font mb-5">AIDA can create personalized study curriculums just for YOU. Have an upcoming test? A.I.D.A will prepare the perfect study guide for you. Not just any study guide--the most personalized study guide you can have. 
+</p>
 
                     </div>
                     <div class="col-md-6">
                         <div>
                             <p style="float: left;"><img src="https://image.freepik.com/free-icon/nut-icon_318-84971.jpg" height="20px" width="20px"  border="1px"></p>
-                            <h4 class="mb-3"> &nbsp Is AIDA safe?</h4>
+                            <h4 class="mb-3"> &nbsp Motivator</h4>
                         </div>
-                        <p class="light-font mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium, nisi nisi fermentum enim, et sagittis dolor nulla vel sapien. Vestibulum sit amet mattis ante. </p>
+                        <p class="light-font mb-5">A.I.D.A uses Watson API when conversing with users to closely monitor emotions. It can detect when a user is stressed for a test, or having personal struggles and has learned to offer advice to users to reduce their emotional stress.</p>
                         <div>
                             <p style="float: left;"><img src="https://image.freepik.com/free-icon/nut-icon_318-84971.jpg" height="20px" width="20px"  border="1px"></p>
-                            <h4 class="mb-3"> &nbsp Is AIDA safe?</h4>
+                            <h4 class="mb-3"> &nbsp Personal Assistant</h4>
                         </div>
-                        <p class="light-font mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium, nisi nisi fermentum enim, et sagittis dolor nulla vel sapien. Vestibulum sit amet mattis ante. </p>
+                        <p class="light-font mb-5">Have a question? Ask A.I.D.A. Need to set reminders for upcoming tests? Ask A.I.D.A. Want to have a conversation about a topic that interests you? Ask A.I.D.A. 
+</p>
 
                     </div>
                 </div>
