--- a/design-brief.html
+++ b/design-brief.html
@@ -540,7 +540,7 @@
                             <div class="single-feature text-center">
                                 <span class="lnr lnr-screen"></span>
                                 <h3>IBM Watson</h3>
-                                <p>IBM’s Watson technology uses natural language processing and deep learning, branches of machine learning, to extract metadata and sentiment from text.</p>
+                                <p style="text-align:justify">IBM’s Watson technology uses natural language processing and deep learning, branches of machine learning, to extract metadata and sentiment from text.</p>
                                 <!-- Begin Modal -->
                                 <script>
                                     $('#watsonmodal').on('shown.bs.modal', function () {
@@ -574,7 +574,8 @@
                                                                         </p>
                                                                 <hr>
                                                                 <h5>Limitations</h5>
-                                                                <p> have tooltips on hover.</p>
+                                                                <p style="text-align:justify">Although Watson can understand human language to a great degree, it cannot understand sarcasm and intended dialect. Humans can create and understand new slang terms that have never been heard before, but computers cannot do this. Computers like Watson are very literal and rational machines unlike humans. In the medical field, doctors use different shorthands for the same phrase (“essential hypertension” could be written as “e.hypertension” or “e.HTN” or “ess.HTN”). Humans can recognize that all of these phrases mean the same thing, but computers cannot unless trained with every single possibility or pattern.
+</p>
                                                           </div>
                                                           <div class="modal-footer">
                                                             <button type="button" class="btn btn-primary"  data-dismiss="modal">OK</button>
@@ -589,8 +590,8 @@
                         <div class="col-md-4">
                             <div class="single-feature text-center">
                                 <span class="lnr lnr-code"></span>
-                                <h3>Mobile AI</h3>
-                                <p>Here, I focus on a range of items and features that we use in life without giving them a second thought such as Coca Cola.</p>
+                                <h3>Mobile A.I.</h3>
+                                <p style="text-align:justify">Personal assistants such as Siri, Cortana, and Google Assistant are accessible at our fingertips. They can set reminders, make calls, and answer questions to make every day life easier.</p>
                                 <!-- Begin Modal -->
                                 <script>
                                     $('#sirimodal').on('shown.bs.modal', function () {
@@ -615,13 +616,17 @@
                                                           </div>
                                                           <div class="modal-body">
                                                                 <h5>Creation</h5>
-                                                                <p>This triggers a popover on click.</p>
+                                                                <p style="text-align:justify"><b>Apple’s Siri</b> was originally developed by the SRI International Artificial Intelligence center. In 2010, the intelligent voice assistant was released as an app on the iOS app store. Upon its success, Apple acquired the software, improved its speech recognition engine by working with Nuance Communications, and released it on the iPhone 4s in 2011.
+                                                                    <br>
+                                                                    <b>Microsoft’s Cortana</b> was initially prototyped in 2009 under the Microsoft Speech products team. To make the A.I. assistant as human-like as possible, they interviewed real human personal assistants, and these interviews led to the development of Cortana’s “notebook” feature. In 2015, Cortana was introduced to the public with the new Windows 10 devices.
+                                                                    <br>
+                                                                    <b>The Google Assistant</b> was the latest digital assistant to make its debut. It was introduced on mobile and smart home devices in May 2016. In 2017, it was introduced as a stand-alone mobile app for both Android and iOS devices.</p>
                                                                 <hr>
                                                                 <h5>Purpose</h5>
-                                                                <p> have tooltips on hover.</p>
-                                                                <hr>
-                                                                <h5>Limitations</h5>
-                                                                <p> have tooltips on hover.</p>
+                                                                <p style="text-align:justify">
+                                                                        These mobile digital assistants allow users to control their device using natural voice commands. Users can send messages, make calls, set reminders, perform calculations, and search the internet. Siri, Cortana, and Google’s Assistant make everyday tasks hands-free, quicker, and more efficient.
+                                                                        </p>
+                                                             
                                                           </div>
                                                           <div class="modal-footer">
                                                             <button type="button" class="btn btn-primary"  data-dismiss="modal">OK</button>
@@ -637,7 +642,7 @@
                             <div class="single-feature text-center">
                                 <span class="lnr lnr-clock"></span>
                                 <h3>A.I.D.A</h3>
-                                <p>Here, I focus on a range of items and features that we use in life without giving them a second thought such as Coca Cola.</p>
+                                <p style="text-align:justify">AIDA uses OCR technology to convert inputted documents into text and performs latent semantic analysis to understand the user's intent and generate questions accordingly.</p>
                                 <!-- Begin Modal -->
                                 <script>
                                     $('#aidamodal').on('shown.bs.modal', function () {
@@ -660,14 +665,18 @@
                                                     </button>
                                                   </div>
                                                   <div class="modal-body">
-                                                        <h5>Creation</h5>
-                                                        <p>This triggers a popover on click.</p>
+                                                        <h5>Deep Learning</h5>
+                                                        <p style="text-align:justify">Deep learning is a branch of the broader machine learning category. While machine learning ecompasses algorithms that are task specific and based on data representations, deep learning focuses only on data representations. Deep learning models created artificial neural networks, simulating an actual human’s wiring, to link information and the relations between pieces of data. These neural network have been used to create language models that A.I systems can interpret.
+
+                                                            </p>
                                                         <hr>
-                                                        <h5>Purpose</h5>
-                                                        <p> have tooltips on hover.</p>
+                                                        <h5>Natural Language Processing
+                                                            </h5>
+                                                        <p style="text-align:justify">Natural language processing is a field of deep learning that uses neural networks to process human language. The process by which a computer translates human speech is called latent semantic analysis (LSA). This is the process of creating relations between terms in a document and formulating major concepts based on these terms. The distributional hypothesis is an important assumption made by LSA because it states that synonyms words will occur in chunks in close proximity to each other. The major concepts determined from the text correspond directly with the user’s intent and their desired actions. This natural language process is what allows computers to converse like humans.</p>
                                                         <hr>
-                                                        <h5>Limitations</h5>
-                                                        <p> have tooltips on hover.</p>
+                                                        <h5>Optical Character Recognition
+                                                            </h5>
+                                                        <p style="text-align:justify">OCR is the translation of text images, handwritten documents, and computer passages into computer text. OCR is a common technology used in everyday life for digitising bank statements, receipts, passport documents, and mail. It is also essential to A.I.D.A because when a students sends pictures of his or her textbook passages, worksheets, or notes, it needs to be converted into computer text for A.I.D.A to interpret.</p>
                                                   </div>
                                                   <div class="modal-footer">
                                                     <button type="button" class="btn btn-primary"  data-dismiss="modal">OK</button>
