--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -481,7 +481,7 @@ Who We Are beginning
                         </p>
                     </div>
                 </div>
-                <div class="footer"><a class="btn" id="prev" href="#" ripple="" ripple-color="#666666">Prev</a><a class="btn" id="next" href="#" ripple="" ripple-color="#666666">Next</a></div>
+                <div class="footer"><a class="btn pink" cc9ad3 id="prev" href="#" ripple="" ripple-color="#666666">Prev</a><a class="btn" id="next" href="#" ripple="" ripple-color="#666666">Next</a></div>
             </div>
         </div>
         <!-- officers close -->
