about page is done

--- a/design-brief.html
+++ b/design-brief.html
@@ -524,7 +524,7 @@
                 <div class="container">
                     <div class="section-title">
                         <small>TECHNOLOGIES</small>
-                        <h3>Current Technology vs A.I.D.A </h3>
+                        <h3>Current Technology vs. A.I.D.A </h3>
                     </div>
                     <div class="row">
                         <div class="col-md-4">
@@ -689,7 +689,7 @@
 
             <div class="container">
                 <div class="section3-title">
-                    <h3>SAFETY & LIABILITIES</h3>
+                    <h3>Safety & Liabilities</h3>
                 </div>
                 <p class = "text-center text-white">
                 A science fiction writer, Isaac Asimov, created three laws of robotics that must be followed to create harmless AI technologies. A.I.D.A was carefully designed to follow all three of these laws because here at A.I.D.A. technologies, safety is our utmost priority.
@@ -735,6 +735,8 @@
                         <a href="" style="text-decoration:none" class="m-2">Webmaster Team 2201-1</a>
                         <br>
                         <a href="" style="text-decoration:none" class="m-2">COPYRIGHT © 2018. West Windsor Plainsboro High School North TSA</a>
+                        <br>
+                        <a href="" style="text-decoration:none" class="m-2">2201007,  2201008,  2201019, 2201020, 2201030 </a>
                     </small>
         </footer>
 
