--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -587,7 +587,7 @@ Who We Are beginning
                     <section class="accordions__accordion">
                         <div class="accordions__header">
                             <div class="accordions__container container">
-                                <h3 class="accordions__title">New Jersey State Conference</h3>
+                                <h3 class="accordions__title">NJ TSA State Conference</h3>
                                 <button class="accordions__button" v-on:click="toggleAccordion('Experience')" v-bind:class="{ 'accordions__button--active': isOpen('Experience') }">
                                     <div class="accordions__icon">+</div>
                                 </button>
@@ -621,7 +621,11 @@ Who We Are beginning
                         </div>
                         <div class="container">
                             <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Credentials') }"><p class = "text-white" >The NJ TSA Leadership Conference was a meeting between all the officers of each participating school’s TSA club in New Jersey. The officers of our club went with curiosity, as a school new to TSA, yet came back with confidence in the club’s goals and members. The meeting helped each school learn more about TSA’s overall mission and gave information more specific to each competition and how to prepare the club for these exclusive events. Additionally, guest speakers and alumni with successful backgrounds gave their opinion and advice to the officers about how to manage the club, and why competing in these events are crucial to the community. Also, being able to see the officers of other more experienced schools gave insight to the officers of what the club may evolve into with time and success.
-                                </p></div>
+                                </p>
+                                <img style="width:auto; height:auto" src="img/stateleadership.JPG"/>
+                            
+                            
+                            </div>
                         </div>
                     </section>
                 </div>
