--- a/about.html
+++ b/about.html
@@ -240,7 +240,8 @@
                     <h3 class="section-heading mb-12" style="text-align:center">
                        LEAP Resume
                     </h3>
-                    <a href="#demo" style="display:block;text-align:center;margin-right:40%;margin-left:40%" class="btn btn-primary" >View Resume</a>
+                    <br>
+                    <a href="#demo" style="display:block;margin:auto;margin-right:10%;margin-left:10%" class="btn btn-primary" >View Resume</a>
 
 
                 </div>
