--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -243,7 +243,7 @@ What is TSA beginning
                         <h3 class="section-heading mb-4">
                             What is TSA
                         </h3>
-                        <p>TSA (Technology Student Association) is a national organization dedicated to helping students create a better future in the Mathematics and Technology fields. The organization uses its yearly set of competitions to test the abilities of the students competing in the event. As well as proving their expansive knowledge, the members are able to represent their school and community when competing for 1st place. </p>
+                        <p>TSA (Technology Student Association) is a national organization dedicated to helping students create a better future in the Mathematics and Technology fields. The organization uses its yearly set of competitions to test the abilities of the students competing in the event. In addition to expanding their knowledge, the members are able to represent their school and community when competing. </p>
                         <p>The TSA motto “Learning to lead in a technical world” is precisely what the organization is working towards, as the club has opened branches in 48 of the 50 states. The overall mission of TSA is to have the members of the club learn and develop their skills in the STEM department and to eventually implement them on solutions towards the world’s concerning international problems.</p>
                     </div>
                 </div>
@@ -262,9 +262,9 @@ Who We Are beginning
                         <h3 class="section-heading mb-4 text-white">
                             Who We Are
                         </h3>
-                        <p class = "text-white">We are WWP High School North’s TSA club, competing in the school’s first TSA season. The officers of the club observed the impact of TSA on the surrounding communities, and decided to bring the opportunity to the students of West Windsor and Plainsboro.
+                        <p class = "text-white">We are WWP High School North’s TSA club, competing in the school’s first TSA season. The officers of the club observed the impact of TSA on the surrounding communities and decided to bring the opportunity to the students of West Windsor and Plainsboro.
                         </p>
-                        <p class = "text-white">Despite the lengthy process of getting the club approved in the school, the officers stayed persistent and were able to establish the club in school before the September of 2017. The club was founded with enough time to publicly introduce the club at the school club fair, in which students from the school get a glimpse of the club’s mission and are able to directly join the club. Currently the club has recruited 66 loyal members, and plans to expand by next year.</p>
+                        <p class = "text-white">Despite the lengthy process of getting the club approved in the school, the officers stayed persistent and were able to establish the club in school before the September of 2017. The club was founded with enough time to publicly introduce the club at the school club fair, where recruited 66 loyal members were recruited. The chapter is collectively participating is 19 competitive events for the first time at the NJ state conference this spring. </p>
                     </div>
                 </div>
             </div>
@@ -297,11 +297,13 @@ Who We Are beginning
                         <div class="d-flex flex-column flex-lg-row">
                             <div>
 
-                                <h2>Weekly Meetings</h2>
-                                <p>Before the start of every club meeting, each student must sign in via google form. Occasionally, the officers send google forms through email to help understand the progress of each group by asking them to fill out a progress survey. Afterwards, the officers each drop in each group to check on how much they have done, and what they plan for the next week. The officers will advise each group as they move closer to the competition dates.
+                                <h2> Meetings</h2>
+                                <h4>Attendance & Checkpoints</h4>
+                                <p>Before the start of every club meeting, each student must sign in to attendance via Google Form. Once a month, the officers send a checkpoint form through email to check up on the progress of each group. The weekly after school meeting following this checkpoint, the officers meet with each group in person to check in on their progress, answer questions, and help them plan for the next week. The officers will advise each group as they move closer to the competition dates.
                                 </p>
+                                <h4>Weekly After School Meetings</h4>
                                 <p> 
-                                    To keep all students in tact with their TSA event, the club runs weekly meetings to regroup the teams and update each other on any group progress. The club officers begin the meetings with recaps on competition dates, lab safety training sessions, and general announcements. Throughout the meetings, students in each event regroup to share their personal progress on the project, as well as to collaborate on plans for the upcoming competitions.
+                                    To keep all students in tact with their TSA event, the club runs weekly meetings to regroup the teams and update each other on any group progress. The club officers begin the meetings with recaps on competition dates, event updates, and general announcements. Throughout the meetings, students in each event regroup to share their personal progress on the project, as well as to collaborate on plans for the upcoming competitions.
                                 </p>
                                 <div>
                                         <img style="width:auto; height:350px"src="img/weeklymeetings1.JPG"/>
@@ -317,10 +319,10 @@ Who We Are beginning
                             <div>
                                 <h2>Recruitment</h2>
                                 <h4>Club Fair</h4>
-                                <p>Club fair is a school program in which each club has a chance to showcase the main message of the club, and can directly recruit members by recording their names and contact information. The TSA club of High School North was able to gain 66 loyal members through that short fair, and hopefully will be able to expand on that number by next year’s fair.
+                                <p>Club fair is a school program in which each club has a chance to showcase the main message of the club, and can directly recruit members by recording their names and contact information. The TSA club of High School North was able to gain 66 loyal members through that short fair and hopefully, will be able to expand on that number by next year’s fair.
                                 </p>
                                 <h4>Lab Safety Training</h4>
-                                <p> The lab safety training is a TSA school club program that teaches each student the different technology available to them. Once they finish the lesson, they have 3 chances to pass a quiz on the lab information. The quiz is to ensure that everyone who goes into the lab room, has enough experience and knowledge to keep themselves injury free before the end of the season. If the student passes the quiz, they will have extensive use to all the lab’s materials and if necessary, has the help of Mr. Ianneli, the teacher advisor the the club.
+                                <p> The lab safety training is a TSA school club program that teaches each student the different technology available to them. Once they finish the lesson, they have 3 chances to pass a quiz on the lab information. The quiz is to ensure that everyone who goes into the lab room has enough experience and knowledge to ensure their own safety and the safety of those around them. If the student passes the quiz, they will have access to all the lab’s machinary.
                                 </p>
                                 <div>
                                         <img style="width:auto; height:250px"src="img/lab1.png"/>
@@ -334,7 +336,7 @@ Who We Are beginning
                             <div>
                                 <h2>Involvement</h2>
                                 <h4>Guest Speakers</h4>
-                                <p>In order to inspire the students and provide a real life example, the president of the club asked for a couple guests to speak to the club’s members. The guests were the school’s robotics team, who have won state competitions through hard work and determination. The purpose of the lesson was to explain the importance of developing your abilities in the STEM fields, thus preparing students with enough knowledge to compete for career opportunities that contain skills that you have previously used in TSA.
+                                <p>To inspire the students and expose them to other applications of technology, the President of the chapter asked for a few guests to speak at one of the weekly meetings. The guests were a self initiated FIRST FTC robotics team and their mentor, who demoed their robot and spoke about their programming design.
                                 </p>
                                <div>
                                         <img style="width:auto; height:280px"src="img/guest1.jpeg"/>
@@ -342,7 +344,7 @@ Who We Are beginning
                                 </div>
                                 <br>
                                 <h4>Party</h4>
-                                <p> As work stricken as the weeks may be, the club ensures to decrease the amount of stress on the students. The students took part in a small party at one of the meetings before the groups started the implementation of their projects. The party became a quick success as all the members of the club had brought different items to contribute to the party, and were able to enjoy themselves and each other's company.
+                                <p> To celebrate New Years, the students held a party at one of the weekly meetings in January. The party became a quick success as all the members of the club had brought different food items to contribute. Students shared their projects with other groups, enjoying themselves and each other's company.
                                 </p>
                             </div>
                         </div>
@@ -352,7 +354,7 @@ Who We Are beginning
                             <div>
                                 <h2>Community</h2>
                                 <h4>Project Code</h4>
-                                <p>One way in which TSA becomes a bigger part of the community is how it reaches its members out to different areas to provide inspiration of the club, and to implement the mission of TSA. In Project Code, an organization dedicated to providing children with a chance to get a head start on the basics of computer languages. The TSA club president and a couple of the members have dedicated multiple hours to promote Project Code in Monroe, and Hamilton.
+                                <p>Project Code is a community program founded by 3 members of our TSA chapter to provide elementary school kids access to free programming classes. Members of our TSA chapter created a 3 month long Scratch programming curriculum, contacted libraries, and promoted the classes to the community. So far, the team has taught 60 students in 2 local libraries - Hamilton and Monroe.
                                 </p>
                                 <div>
                                         <img style="width:auto; height:350px"src="img/projectcode1.jpg"/>
@@ -362,7 +364,7 @@ Who We Are beginning
                                 <br>
                                 <h4>Innovation Fair</h4>
                                 <p> 
-                                    Another way the TSA club helps to promote the TSA motto is by encouraging its own school members to compete in local events. The Innovation Fair in West Windsor-Plainsboro is a public community fair where students from different schools, and ideas come to display their potentially innovative projects. By having our members work towards this fair, the club is able to promote technological advancements in the STEM fields, while also advocating for TSA’s mission.
+                                    Another way the TSA club helps to promote the TSA motto is by encouraging its own school members to showcase their TSA projects in the community. The Innovation Fair in West Windsor-Plainsboro is a public community fair where students from different schools come to display their innovative projects. Members of our TSA chapter have been accepted to showcase their projects at this fair this spring.
                                 </p>
 
                             </div>
@@ -386,7 +388,7 @@ Who We Are beginning
                             <br>
                             <div class = "row">
                                 <div class = "bqcontainer col col-lg-7">
-                                <blockquote class="blockquote text-white">One of the events our club is competing in is the Biotechnology Design. The event’s topic is Food, leading the group of students to focus on a biological disease that is killing a huge proportion of food in Eastern Africa. Their solution: Find a bacteria to reverse the effect of MLND, the disease affecting the crops, on the DNA of the crop. This event focuses on solutions to the growing food epidemic across different parts of the world, and how new technology can help to reverse the problem and provide support to the people around the world experiencing the dilemma.
+                                <blockquote class="blockquote text-white">One of the events our club is competing in is the Biotechnology Design. The event’s topic is Food, leading the group of students to focus on a biological disease that is killing a huge proportion of food in Eastern Africa. 
                                 </blockquote>
                                 </div>
                                 <img  class = "col col-lg-5" style="height:280px; width:auto;" src = "./img/biotechnology.jpg">
