--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -264,7 +264,7 @@ Who We Are beginning
                         </h3>
                         <p class = "text-white">We are WWP High School North’s TSA club, competing in the school’s first TSA season. The officers of the club observed the impact of TSA on the surrounding communities and decided to bring the opportunity to the students of West Windsor and Plainsboro.
                         </p>
-                        <p class = "text-white">Despite the lengthy process of getting the club approved in the school, the officers stayed persistent and were able to establish the club in school before the September of 2017. The club was founded with enough time to publicly introduce the club at the school club fair, where recruited 66 loyal members were recruited. The chapter is collectively participating is 19 competitive events for the first time at the NJ state conference this spring. </p>
+                        <p class = "text-white">Despite the lengthy process of getting the club approved in the school, the officers stayed persistent and were able to establish the club in school before the September of 2017. The club was founded with enough time to publicly introduce the club at the school club fair, where recruited 66 loyal members were recruited. The chapter is collectively participating in 19 competitive events for the first time at the NJ state conference this spring. </p>
                     </div>
                 </div>
             </div>
@@ -596,7 +596,7 @@ Who We Are beginning
                             </div>
                         </div>
                         <div class="container .nobg">
-                            <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Experience') }"><p class = "text-white" >The NJ state conference is being held on April 14, 2018. It is held every spring at The College Of New Jersey. This year, students from New Jersey will compete in over 30 different events and the winners will proceed to the national TSA conference in Atlanta, Georgia. Despite being WWP High School North’s first year at competition, we plan to have each one of the events have a representative from our school that will try their best to win the competition. Even if a group’s project doesn't win the State competition, they will still be able to showcase their work in local competitions and fair such as the Innovation fair.</p></div>
+                            <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Experience') }"><p class = "text-white" >The NJ state conference is being held on April 14, 2018. It is held every spring at The College Of New Jersey. This year, students from New Jersey will compete in over 30 different events and the winners will proceed to the national TSA conference in Atlanta, Georgia. Despite being WWP High School North’s first year at competition, we are collectively participating in 19 events with a majority of members doing multiple events.</p></div>
                         </div>
                     </section>
                     <section class="accordions__accordion">
@@ -609,7 +609,7 @@ Who We Are beginning
                             </div>
                         </div>
                         <div class="container">
-                            <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Insights') }"><p class = "text-white" >The national TSA conference is from June 22nd to June 26th. This year, it is being in Atlanta, Georgia. Students from all over the country who have won at their state competitions will be competing in this 4 day long conference, participiating in events ranging from a keynote speech by Todd Thibodeaux to their own competitive events.</p></div>
+                            <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Insights') }"><p class = "text-white" >The national TSA conference is from June 22nd to June 26th. This year, it is being held in Atlanta, Georgia. Students from all over the country who have won at their state competitions will be competing in this 4 day long conference, participiating in events ranging from a keynote speech by Todd Thibodeaux to their own competitive events.</p></div>
                         </div>
                     </section>
                     <section class="accordions__accordion">
@@ -622,7 +622,7 @@ Who We Are beginning
                             </div>
                         </div>
                         <div class="container">
-                            <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Credentials') }"><p class = "text-white" >The NJ TSA Leadership Conference was a meeting between all the officers of each participating school’s TSA club in New Jersey. The officers of our club went with curiosity, as a school new to TSA, yet came back with confidence in the club’s goals and members. The meeting helped each school learn more about TSA’s overall mission and gave information more specific to each competition and how to prepare the club for these exclusive events. Additionally, guest speakers and alumni with successful backgrounds gave their opinion and advice to the officers about how to manage the club, and why competing in these events are crucial to the community. Also, being able to see the officers of other more experienced schools gave insight to the officers of what the club may evolve into with time and success.
+                            <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Credentials') }"><p class = "text-white" >The NJ TSA Leadership Conference was a meeting between all the officers of each participating school’s TSA club in New Jersey. The officers of our club went with curiosity, as a school new to TSA, yet came back with confidence in the club’s goals and members. Each of the officers learned valuable leadership skills interacting with the state officers and other TSA chapters. The officers also participated in a Toy Story themed design challenge, where they had to create a carriage that moved past a zipline.
                                 </p>
                                 <img style="width:auto; height:auto" src="img/stateleadership.JPG"/>
                             
