--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <!-- Themify Icons -->
-        <link rel="stylesheet" href="css/themify-icons.css">
+        <!--   Icons -->
+        <link rel="stylesheet" href="css/ -icons.css">
         <!-- Owl carousel -->
         <link rel="stylesheet" href="css/owl.carousel.min.css">
         <!-- Main css -->
