--- a/about.html
+++ b/about.html
@@ -51,9 +51,9 @@
                                     <li class="nav-item"> <a class="nav-link" href="#media">MEDIA</a> </li>
                                     <li class="nav-item"> <a class="nav-link" href="#frameworks">FRAMEWORKS</a> </li>
                                     <li class="nav-item"> <a class="nav-link" href="#tools">TOOLS</a> </li>
-                                    <li class="nav-item"><a href="./index.html#home" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">CTE</a></li>
+                                    <li class="nav-item"><a href="./cte.html#home" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">CTE</a></li>
                                     <li class="nav-item"><a href="./design-brief.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">DESIGN BRIEF</a></li>
-                                    <li class="nav-item"><a href="./tsa-chapter.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">CHAPTER</a></li>
+                                    <li class="nav-item"><a href="./index.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">CHAPTER</a></li>
 
                                 </ul>
                             </div>
