--- a/design-brief.html
+++ b/design-brief.html
@@ -81,9 +81,9 @@
                                     <li class="nav-item"> <a class="nav-link" href="#costs">COSTS</a> </li>
                                     <li class="nav-item"> <a class="nav-link" href="#technologies">TECHNOLOGIES</a> </li>
                                     <li class="nav-item"> <a class="nav-link" href="#safety">SAFETY</a> </li>
-                                    <li class="nav-item"><a href="./index.html#home" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">CTE</a></li>
-                                    <li class="nav-item"><a href="./tsa-chapter.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">TSA Chapter</a></li>
-                                    <li class="nav-item"><a href="./about.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">About</a></li>
+                                    <li class="nav-item"><a href="./cte.html#home" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">CTE</a></li>
+                                    <li class="nav-item"><a href="./index.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">Chapter</a></li>
+                                    <li class="nav-item"><a href="./design-brief.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">About</a></li>
                                 </ul>
                             </div>
                         </nav>
