--- a/about.html
+++ b/about.html
@@ -350,6 +350,9 @@ Who We Are beginning
                             Frameworks
                         </h3>
                         <p class = "text-white">
+                            All content built on top of these frameworks is the original work of the HSN TSA Webmaster team.
+                        </p>
+                        <p class = "text-white">
 
 
 <b> Sketch.js </b>
