--- a/design-brief.html
+++ b/design-brief.html
@@ -375,10 +375,9 @@
                     </div>
         
                     <div class="img-gallery owl-carousel owl-theme">
-                        <img src="img/screen1.jpg" alt="image">
-                        <img src="img/screen2.jpg" alt="image">
-                        <img src="img/screen3.jpg" alt="image">
-                        <img src="img/screen1.jpg" alt="image">
+                        <img src="img/textss.png" alt="image">
+                        <img src="img/questionss.png" alt="image">
+                        <img src="img/testss2.png" alt="image">
                     </div>
         
                 </div>
