--- a/design-brief.html
+++ b/design-brief.html
@@ -531,7 +531,7 @@
                             <div class="single-feature text-center">
                                 <span class="lnr lnr-screen"></span>
                                 <h3>IBM Watson</h3>
-                                <p style="text-align:justify">IBM’s Watson technology uses natural language processing and deep learning, branches of machine learning, to extract metadata and sentiment from text.</p>
+                                <p style="text-align:justify">IBM’s Watson technology uses natural language processing and deep learning, both of which are branches of machine learning, to extract metadata and sentiment from text.</p>
                                 <!-- Begin Modal -->
                                 <script>
                                     $('#watsonmodal').on('shown.bs.modal', function () {
@@ -633,7 +633,7 @@
                             <div class="single-feature text-center">
                                 <span class="lnr lnr-clock"></span>
                                 <h3>A.I.D.A</h3>
-                                <p style="text-align:justify">AIDA uses OCR technology to convert inputted documents into text and performs latent semantic analysis to understand the user's intent and generate questions accordingly.</p>
+                                <p style="text-align:justify">AIDA uses OCR technology to convert inputted documents into text and performs latent semantic analysis to understand the user's intent and generate questions according to important topic areas.</p>
                                 <!-- Begin Modal -->
                                 <script>
                                     $('#aidamodal').on('shown.bs.modal', function () {
