--- a/design-brief.html
+++ b/design-brief.html
@@ -632,7 +632,7 @@
                             <div class="single-feature text-center">
                                 <span class="lnr lnr-clock"></span>
                                 <h3>A.I.D.A</h3>
-                                <p style="text-align:justify">AIDA uses OCR technology to convert inputted documents into text and performs latent semantic analysis to understand the user's intent and generate questions according to important topic areas.</p>
+                                <p style="text-align:justify">AIDA uses OCR technology to convert inputted documents into text and performs latent semantic analysis to understand the user's intent and generate questions accordingly.</p>
                                 <!-- Begin Modal -->
                                 <script>
                                     $('#aidamodal').on('shown.bs.modal', function () {
