officer text modified

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ Who We Are beginning
                         <div class="thumbnail"><img src="officers/sahit.png"/></div>
                         <h3>Sahit Penmatcha</h3>
                         <h4>President</h4>
-                        <p class="description">Sahit is the founder and president of TSA. He is passionate about computer science and would like to share his love for computers with others through TSA. The president manages the overall meeting, details the committee of what should be done, and sets up meetings with other sources.</p>
+                        <p class="description">Sahit is a founder and president of TSA. He is passionate about computer science and would like to share his love for computers with others through TSA. The president manages the overall meeting, informs the committee about what should be done, and sets up meetings with various sources.</p>
                     </div>
                     <div class="product" product-id="2">
                         <div class="thumbnail"><img src="officers/neil.png"/></div>
@@ -461,27 +461,27 @@ Who We Are beginning
                         <div class="thumbnail"><img src="officers/george.png"/></div>
                         <h3>George Zhou</h3>
                         <h4>Secretary</h4>
-                        <p class="description">George holds the secretary position. He has a passion for STEM and is particularly interested in software development. The secretary records the participation of the club members, and communicates with the students over the event progress.
+                        <p class="description">George holds the secretary position. He has a passion for STEM and is particularly interested in software development. The secretary records the participation of the club members and conferences with the students about event progress.
                         </p>
                     </div>
                     <div class="product" product-id="4">
                         <div class="thumbnail"><img src="officers/skandan.png"/></div>
                         <h3>Skandan Venkatraman</h3>
                         <h4>Treasurer</h4>
-                        <p class="description">Skandan is the club treasurer. He is interested in biology and the medical sciences. The treasurer controls the financial portions of the club, maintains club’s bank account, updates other officers on account information, and is notified of any expenditures necessary.</p>
+                        <p class="description">Skandan is the club treasurer. He is interested in biology and the medical sciences. The treasurer controls the financial portions of the club, maintains the club’s bank account and updates other officers on account information.</p>
                     </div>
                     <div class="product" product-id="5">
                         <div class="thumbnail"><img src="officers/aparna.png"/></div>
                         <h3>Aparna Rajesh</h3>
                         <h4>Reporter</h4>
-                        <p class="description">Aparna holds the reporter position. She is interested in educating younger children about STEM and spreading STEM in the community. The reporter reports TSA club’s progress or any news to the public, contributes to the TSA web page, and contacts club president if any urgent news regarding the club is released.
+                        <p class="description">Aparna holds the reporter position. She is interested in educating younger children about STEM and spreading STEM in the community. The reporter reports the club’s progress or any news to the public, contributes to the TSA web page and contacts the club president if any urgent news regarding the club is released.
                         </p>
                     </div>
                     <div class="product" product-id="6">
                         <div class="thumbnail"><img src="officers/jagdeep.png"/></div>
                         <h3>Jagdeep Gill</h3>
                         <h4>Sergeant-At-Arms</h4>
-                        <p class="description">Jagdeep is the club's Sergeant-at-Arms. He loves all things chemistry. The Sergeant-At-Arms organizes room before every club meeting, assists President in any procedures or events requiring altering the environment, and enforces club rules when necessary.
+                        <p class="description">Jagdeep is the club's Sergeant-at-Arms. He loves all things chemistry. The Sergeant-At-Arms organizes the room before every club meeting, assists the President in any procedures or events requiring altering the environment and enforces club rules when necessary.
                         </p>
                     </div>
                 </div>
