--- a/about.html
+++ b/about.html
@@ -241,7 +241,7 @@
                        LEAP Resume
                     </h3>
                     <br>
-                    <a href="#demo" style="display:block;margin:auto;margin-right:10%;margin-left:10%" class="btn btn-primary" >View Resume</a>
+                    <a href="https://docs.google.com/document/d/1oo0GMMyk3Qk19xo0hqqkqjitMkyuHyHxaaVW6SGSRg4/edit?usp=sharing" style="display:block;margin:auto;margin-right:10%;margin-left:10%" class="btn btn-primary" >View Resume</a>
 
 
                 </div>
